# p2f-pydantic

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: pypi-publish.yml
p2f_pydantic/: __init__.py  age_model.py  data_quality.py  datasets.py  doi.py  generic.py  harm_age.py  harm_data_metadata.py  harm_data_numerical.py  harm_data_record.py  harm_data_types.py  harm_ds_time.py  harm_location.py  harm_reference.py  harm_species.py  harm_timeslices.py  harmonized_data.py  keywords.py  link_git.py  seasonality.py  system.py  temp_accounts.py
