[project]
name = "p2f-pydantic"
version = "0.0.9"
description = "Pydantic library to define the data types of the Past to Future project API."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic[email]>=2.11.4",
    "python-dotenv>=1.1.0",
]
authors = [
    { name="Garrett Speed", email="g.t.speed@uu.nl"} 
]

[project.urls]
Homepage = "https://github.com/Past-to-Future-EU-Horizon/p2f-pydantic"